--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <a href="https://derivesuptickanalyzer00.github.io/deriveanalyzerhigherlower/" class="main-button">Higher/Lower</a>
         <button class="small-button" onclick="openHowToUse('https://derivesuptickanalyzer00.github.io/deriveanalyzerhigherlowerInstruction/')">How to use</button>
 
-        <a href="https://derivesupanalyzerrisefall.site/" class="main-button">Rise/Fall</a>
+        <a href="https://derivesuptickanalyzer00.github.io/derivesupanalyzerrisefall/" class="main-button">Rise/Fall</a>
         <button class="small-button" onclick="openHowToUse('https://derivesuptickanalyzer00.github.io/deriveanalyzerrisefallInstruction/')">How to use</button>
 
         <a href="https://derivesuptickanalyzer00.github.io/deriveanalyzerovermatchesdiffers/" class="main-button">Matches/Differs</a>
