--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </head>
 <body>
     <h1>Analysis Tool for Deriv</h1>
-    <p>  Account active with Deriv <a 
+    <p>      Account activated with Deriv <a 
 
     <div class="button-container">
         <a href="https://derivesuptickanalyzer00.github.io/deriveanalyzeroverunder1/" class="main-button">Over/Under1</a>
